<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img_background_main"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context="com.example.cruiseTrip.roomBooking.RoomTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reservationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/reservation_title"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:padding="15dp"
            android:rowCount="4">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                >

                <LinearLayout
                    android:id="@+id/insideRoom"
                    android:layout_width="360dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/roomBg">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Inside"
                                android:textColor="#111"
                                android:textSize="26sp"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reservation_item1"
                                android:textColor="#111"
                                android:textSize="15sp"></TextView>
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/img_room_inside"></ImageView>
                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="Price starting from $2,000"
                        android:textColor="#111"
                        android:textSize="16dp"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:id="@+id/oceanRoom"
                    android:layout_width="360dp"
                    android:layout_height="match_parent"
                    android:background="@color/roomBg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Oceanview"
                                android:textColor="#111"
                                android:textSize="26sp"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reservation_item2"
                                android:textColor="#111"
                                android:textSize="15sp"></TextView>
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/img_room_oceanview"></ImageView>
                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="Price starting from $2,500"
                        android:textColor="#111"
                        android:textSize="16dp"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:id="@+id/verandahRoom"
                    android:layout_width="360dp"
                    android:layout_height="match_parent"
                    android:background="@color/roomBg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Verandah"
                                android:textColor="#111"
                                android:textSize="26sp"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reservation_item3"
                                android:textColor="#111"
                                android:textSize="15sp"></TextView>
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/img_room_verandah"></ImageView>
                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="Price starting from $3,000"
                        android:textColor="#111"
                        android:textSize="16dp"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:id="@+id/conciergeRoom"
                    android:layout_width="360dp"
                    android:layout_height="match_parent"
                    android:background="@color/roomBg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Concierge"
                                android:textColor="#111"
                                android:textSize="26sp"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reservation_item4"
                                android:textColor="#111"
                                android:textSize="15sp"></TextView>
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/img_room_concierge"></ImageView>
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="Price starting from $4,000"
                        android:textColor="#111"
                        android:textSize="16dp"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</ScrollView>
